--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -24,68 +24,70 @@ body {
 
 /* Content sectioning */
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    display: block;
-    width: 100%;
-    position: relative;
-    font-family: var(--winter-heading-font);
-    font-weight: var(--winter-heading-font-weight);
-    line-height: var(--winter-heading-line-height);
-    color: var(--winter-heading-fg);
+main {
+    & h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        display: block;
+        width: 100%;
+        position: relative;
+        font-family: var(--winter-heading-font);
+        font-weight: var(--winter-heading-font-weight);
+        line-height: var(--winter-heading-line-height);
+        color: var(--winter-heading-fg);
 
-    &:not(:first-child) {
-        margin-block-start: var(--winter-heading-spacing);
-    }
+        &:not(:first-child) {
+            margin-block-start: var(--winter-heading-spacing);
+        }
 
-    & .headerlink {
-        position: absolute;
-        top: 0;
-        left: -1.25ch;
-        height: 100%;
-        display: inline-flex;
-        align-items: center;
-        color: var(--winter-heading-link-fg);
-        text-decoration: none;
-        font-size: 75%;
-
-        &:is([aria-current], :hover, :active, :focus) {
+        & .headerlink {
+            position: absolute;
+            top: 0;
+            left: -1.25ch;
+            height: 100%;
+            display: inline-flex;
+            align-items: center;
+            color: var(--winter-heading-link-fg);
             text-decoration: none;
+            font-size: 75%;
+
+            &:is([aria-current], :hover, :active, :focus) {
+                text-decoration: none;
+            }
         }
     }
-}
-h1 {
-    font-size: var(--winter-font-size-xxxl);
-}
-h2 {
-    font-size: var(--winter-font-size-xxxl);
-}
-h3 {
-    font-size: var(--winter-font-size-xxl);
-}
-h4 {
-    font-size: var(--winter-font-size-xl);
-}
-h5 {
-    font-size: var(--winter-font-size-l);
-}
-h6 {
-    font-size: var(--winter-font-size-l);
-}
+    & h1 {
+        font-size: var(--winter-font-size-xxxl);
+    }
+    & h2 {
+        font-size: var(--winter-font-size-xxxl);
+    }
+    & h3 {
+        font-size: var(--winter-font-size-xxl);
+    }
+    & h4 {
+        font-size: var(--winter-font-size-xl);
+    }
+    & h5 {
+        font-size: var(--winter-font-size-l);
+    }
+    & h6 {
+        font-size: var(--winter-font-size-l);
+    }
 
-h2 + :is(h2, h3, h4, h5, h6),
-h3 + :is(h3, h4, h5, h6),
-h4 + :is(h4, h5, h6),
-h5 + :is(h5, h6),
-h6 + :is(h6) {
-    margin-block-start: 0;
-
-    &:not(:first-child) {
+    & h2 + :is(h2, h3, h4, h5, h6),
+    h3 + :is(h3, h4, h5, h6),
+    h4 + :is(h4, h5, h6),
+    h5 + :is(h5, h6),
+    h6 + :is(h6) {
         margin-block-start: 0;
+
+        &:not(:first-child) {
+            margin-block-start: 0;
+        }
     }
 }
 
@@ -93,22 +95,18 @@ h6 + :is(h6) {
 Text block content
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
-/* Overall styling, e.g. vertical spacing */
-p,
-ol,
-ul,
-pre,
-blockquote,
-figure,
-hr,
-dl {
-    margin-block: var(--winter-block-spacing);
-}
-
-p {
-}
-
 main {
+    & p,
+    ol,
+    ul,
+    pre,
+    blockquote,
+    figure,
+    hr,
+    dl {
+        margin-block: var(--winter-block-spacing);
+    }
+
     & ol,
     ul {
         padding: 0;
@@ -138,288 +136,302 @@ main {
             }
         }
     }
-}
-
-code {
-    font-family: var(--winter-font-mono);
-    font-size: var(--winter-code-font-size);
-    color: var(--winter-code-fg);
-    background: var(--winter-code-bg);
-    padding: var(--winter-code-padding);
-    /* border: 1px solid var(--inline-code-border); */
-}
-
-pre {
-    -webkit-overflow-scrolling: touch;
-    white-space: pre;
-    word-wrap: normal;
-    overflow-x: auto;
-    font-family: var(--winter-font-mono);
-    font-size: var(--winter-pre-font-size);
-    line-height: var(--winter-pre-line-height);
-    color: var(--winter-pre-fg);
-    background: var(--winter-pre-bg);
-    padding: var(--winter-pre-padding);
-    box-shadow: var(--winter-shadow-s);
 
     & code {
-        font-size: 1em;
-        color: currentColor;
-        padding: 0;
-        background: transparent;
+        font-family: var(--winter-font-mono);
+        font-size: var(--winter-code-font-size);
+        color: var(--winter-code-fg);
+        background: var(--winter-code-bg);
+        padding: var(--winter-code-padding);
+        /* border: 1px solid var(--inline-code-border); */
     }
 
-    scrollbar-width: thin;
-    scrollbar-color: var(--winter-pre-scrollbar) transparent;
+    & pre {
+        -webkit-overflow-scrolling: touch;
+        white-space: pre;
+        word-wrap: normal;
+        overflow-x: auto;
+        font-family: var(--winter-font-mono);
+        font-size: var(--winter-pre-font-size);
+        line-height: var(--winter-pre-line-height);
+        color: var(--winter-pre-fg);
+        background: var(--winter-pre-bg);
+        padding: var(--winter-pre-padding);
+        box-shadow: var(--winter-shadow-s);
 
-    &:hover {
-        scrollbar-color: var(--winter-pre-scrollbar-hover) transparent;
+        & code {
+            font-size: 1em;
+            color: currentColor;
+            padding: 0;
+            background: transparent;
+        }
 
+        scrollbar-width: thin;
+        scrollbar-color: var(--winter-pre-scrollbar) transparent;
+
+        &:hover {
+            scrollbar-color: var(--winter-pre-scrollbar-hover) transparent;
+
+            &::-webkit-scrollbar-thumb {
+                background-color: var(--winter-pre-scrollbar-hover);
+            }
+        }
+
+        &::-webkit-scrollbar {
+            width: 0.25rem;
+            height: 0.25rem;
+        }
         &::-webkit-scrollbar-thumb {
-            background-color: var(--winter-pre-scrollbar-hover);
+            background-color: var(--winter-pre-scrollbar);
         }
     }
 
-    &::-webkit-scrollbar {
-        width: 0.25rem;
-        height: 0.25rem;
-    }
-    &::-webkit-scrollbar-thumb {
-        background-color: var(--winter-pre-scrollbar);
-    }
-}
+    & blockquote {
+        font-family: var(--winter-blockquote-font);
+        font-size: var(--winter-blockquote-font-size);
+        color: var(--winter-blockquote-fg);
+        background: var(--winter-blockquote-bg);
+        border-inline-start: 0.15rem solid var(--winter-blockquote-fg);
+        padding: var(--winter-blockquote-padding);
+        box-shadow: var(--winter-shadow-s);
 
-blockquote {
-    font-family: var(--winter-blockquote-font);
-    font-size: var(--winter-blockquote-font-size);
-    color: var(--winter-blockquote-fg);
-    background: var(--winter-blockquote-bg);
-    border-inline-start: 0.15rem solid var(--winter-blockquote-fg);
-    padding: var(--winter-blockquote-padding);
-    box-shadow: var(--winter-shadow-s);
-
-    & p:first-child {
-        margin-block-start: 0;
+        & p:first-child {
+            margin-block-start: 0;
+        }
+        & p:last-child {
+            margin-block-end: 0;
+        }
     }
-    & p:last-child {
-        margin-block-end: 0;
+
+    & figure {
     }
-}
-
-figure {
-}
-figcaption {
-}
-
-hr {
-    display: flow-root;
-    border: none;
-    border-bottom: var(--winter-hr-border);
-}
-
-dl {
-    & dt {
-        margin-block-start: var(--winter-desc-list-block-spacing);
-        font-family: var(--winter-desc-term-font);
-        font-size: var(--winter-desc-term-font-size);
-        color: var(--winter-desc-term-fg);
-        border-left: 0.15rem solid var(--winter-desc-term-fg);
-        padding-inline: var(--winter-desc-list-padding);
+    & figcaption {
     }
-    & dd {
-        border-left: 0.15rem solid var(--winter-desc-term-fg);
-        padding-inline: var(--winter-desc-list-padding);
-        padding-block-end: 0;
+
+    & hr {
+        display: flow-root;
+        border: none;
+        border-bottom: var(--winter-hr-border);
+    }
+
+    & dl {
+        & dt {
+            margin-block-start: var(--winter-desc-list-block-spacing);
+            font-family: var(--winter-desc-term-font);
+            font-size: var(--winter-desc-term-font-size);
+            color: var(--winter-desc-term-fg);
+            border-left: 0.15rem solid var(--winter-desc-term-fg);
+            padding-inline: var(--winter-desc-list-padding);
+        }
+        & dd {
+            border-left: 0.15rem solid var(--winter-desc-term-fg);
+            padding-inline: var(--winter-desc-list-padding);
+            padding-block-end: 0;
+        }
     }
 }
 
-/* Inline text */
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+Text inline content
+* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
-a,
-[role="link"] {
-    color: var(--winter-link-fg);
-    background: var(--winter-link-bg);
-    text-decoration: var(--winter-link-decoration);
+main {
+    & a,
+    [role="link"] {
+        color: var(--winter-link-fg);
+        background: var(--winter-link-bg);
+        text-decoration: var(--winter-link-decoration);
 
-    &:is([aria-current], :hover, :active, :focus) {
-        color: var(--winter-link-hover-fg);
-        background: var(--winter-link-hover-bg);
-        text-decoration: var(--winter-link-hover-decoration);
+        &:is([aria-current], :hover, :active, :focus) {
+            color: var(--winter-link-hover-fg);
+            background: var(--winter-link-hover-bg);
+            text-decoration: var(--winter-link-hover-decoration);
+        }
+    }
+
+    & strong,
+    b {
+    }
+
+    & em,
+    i {
+    }
+
+    & q {
+    }
+    & cite {
+    }
+
+    & s {
+    }
+
+    & mark {
+        color: var(--winter-mark-fg);
+        background-color: var(--winter-mark-bg);
+        word-break: break-word;
+        box-decoration-break: clone;
+    }
+
+    & small {
+        font-size: 0.8em;
+        line-height: inherit;
+    }
+
+    /* Prevent `sub` and `sup` elements from affecting line height */
+    & sub,
+    sup {
+        position: relative;
+        font-size: 0.8em;
+        line-height: 0;
+        vertical-align: baseline;
+    }
+    & sub {
+        bottom: -0.25em;
+    }
+    & sup {
+        top: -0.5em;
+    }
+
+    & dfn {
+    }
+    & abbr {
+        text-decoration: none;
+        cursor: help;
+        border-bottom: var(--winter-abbr-border);
+    }
+
+    & var {
+    }
+    & kbd {
+        font-family: var(--winter-kbd-font);
+        font-size: var(--winter-kbd-font-size);
+        color: var(--winter-kbd-fg);
+        background: var(--winter-kbd-bg);
+        padding: var(--winter-kbd-padding);
+        border-radius: var(--winter-kbd-border-radius);
+        border: 1px solid transparent;
+    }
+    & samp {
+    }
+
+    & u {
+    }
+
+    & data {
+    }
+    & time {
+    }
+
+    & del {
+    }
+    & ins {
     }
 }
 
-strong,
-b {
-}
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+Embedded media
+* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
-em,
-i {
-}
-
-q {
-}
-cite {
-}
-
-s {
-}
-
-mark {
-    color: var(--winter-mark-fg);
-    background-color: var(--winter-mark-bg);
-    word-break: break-word;
-    box-decoration-break: clone;
-}
-
-small {
-    font-size: 0.8em;
-    line-height: inherit;
-}
-
-/* Prevent `sub` and `sup` elements from affecting line height */
-sub,
-sup {
-    position: relative;
-    font-size: 0.8em;
-    line-height: 0;
-    vertical-align: baseline;
-}
-sub {
-    bottom: -0.25em;
-}
-sup {
-    top: -0.5em;
-}
-
-code {
-}
-
-dfn {
-}
-abbr {
-    text-decoration: none;
-    cursor: help;
-    border-bottom: var(--winter-abbr-border);
-}
-abbr[title] {
-}
-
-var {
-}
-kbd {
-    font-family: var(--winter-kbd-font);
-    font-size: var(--winter-kbd-font-size);
-    color: var(--winter-kbd-fg);
-    background: var(--winter-kbd-bg);
-    padding: var(--winter-kbd-padding);
-    border-radius: var(--winter-kbd-border-radius);
-    border: 1px solid transparent;
-}
-samp {
-}
-
-u {
-}
-
-data {
-}
-time {
-}
-
-del {
-}
-ins {
-}
-
-/* Embedded media */
-
-img,
-svg,
-video,
-canvas,
-audio,
-object {
-    margin-block: var(--winter-block-spacing);
-    margin-inline: auto;
-    max-width: 100%;
-    height: auto;
-    box-shadow: var(--winter-shadow-s);
-}
-
-img {
-    &[align] {
-        margin: 1em;
-        max-width: 50%;
+main {
+    & img,
+    svg,
+    video,
+    canvas,
+    audio,
+    object {
+        margin-block: var(--winter-block-spacing);
+        margin-inline: auto;
+        max-width: 100%;
+        height: auto;
+        box-shadow: var(--winter-shadow-s);
     }
 
-    &[align="left"] {
-        margin-left: 0;
+    & img {
+        &[align] {
+            margin: 1em;
+            max-width: 50%;
+        }
+
+        &[align="left"] {
+            margin-left: 0;
+        }
+
+        &[align="right"] {
+            margin-right: 0;
+        }
+
+        &.small {
+            max-width: 10%;
+        }
+        &.quarter {
+            max-width: 25%;
+        }
+        &.half {
+            max-width: 50%;
+        }
+    }
+    & svg {
+    }
+    & video {
+    }
+    & canvas {
+    }
+    & audio {
+    }
+    & object {
+    }
+}
+
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+Tables
+* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+
+main {
+    & table {
+    }
+    & caption {
+    }
+    & col:first-child {
+    }
+    & thead {
+    }
+    & tbody {
+    }
+    & tfoot {
+    }
+    & tr {
+    }
+    & th {
+    }
+    & td {
+    }
+}
+
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+Interactive elements
+* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+
+main {
+    & details {
+    }
+    & details[open] {
+    }
+    & summary {
+    }
+    & details[open] summary {
     }
 
-    &[align="right"] {
-        margin-right: 0;
+    & dialog {
     }
-
-    &.small {
-        max-width: 10%;
-    }
-    &.quarter {
-        max-width: 25%;
-    }
-    &.half {
-        max-width: 50%;
+    & dialog::backdrop {
     }
 }
-svg {
-}
-video {
-}
-canvas {
-}
-audio {
-}
-object {
-}
 
-/* Tables */
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+Global modifiers
+* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
-table {
-}
-caption {
-}
-col:first-child {
-}
-thead {
-}
-tbody {
-}
-tfoot {
-}
-tr {
-}
-th {
-}
-td {
-}
-
-/* Details, dialog */
-details {
-}
-details[open] {
-}
-summary {
-}
-details[open] summary {
-}
-
-dialog {
-}
-dialog::backdrop {
-}
-
-/* Modifiers */
-
-article {
+main {
     /* Allows pulling block elements left or right */
     .inline {
         float: inline-start;
