--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -44,6 +44,10 @@ header {
             color: var(--winter-header-fg);
             display: inline-block;
             text-decoration: none;
+
+            &:hover {
+                text-decoration: none;
+            }
         }
     }
 }
