--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -4,12 +4,16 @@
     Full text available at: https://opensource.org/licenses/MIT
 */
 
-/* Other */
-
 main {
     & winter-audio-player {
         width: 640px;
         max-width: 80%;
         margin: 2em auto;
+    }
+
+    & winter-carousel {
+        & img {
+            margin: 0;
+        }
     }
 }
