--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,7 @@
 @import url("./globals.css");
 @import url("./layout.css");
 @import url("./nav.css");
+@import url("./footer.css");
 @import url("./content.css");
 @import url("./admonitions.css");
 @import url("./footnotes.css");
